dont knwo what i changed

--- a/index.html
+++ b/index.html
@@ -8,29 +8,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!--STYLES-->
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Inconsolata" type="text/css">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/icon?family=Material+Icons" >
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/styles/materialize.min.css" media="screen,projection">
     <link rel="stylesheet" href="/styles/normalize.min.css">
     <link rel="stylesheet" href="/styles/main.css">
-    <link href="http://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--STYLES END-->
 </head>
 <body>
 
-    <header></header>
+    <header>im not supposed to be seen</header>
 
-    <main></main>
+    <main>
+        <!-- <div class="main-container container"></div> -->
+    </main>
 
     <footer></footer>
 
     <!--SCRIPTS-->
-    <script src="/js/dependencies/lodash.min.js"></script>
+    <!-- <script src="/js/dependencies/lodash.min.js"></script> -->
     <script src="/js/dependencies/jquery-1.11.3.min.js"></script>
     <script src="/js/dependencies/materialize.min.js"></script>
     <script src="/js/dependencies/bluebird.min.js"></script>
-    <script src="/js/dependencies/director.min.js"></script>
+    <!-- <script src="/js/dependencies/director.min.js"></script> -->
     <script src="/js/dependencies/mithril.min.js"></script>
-    <script src="/js/dependencies/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+    <!-- <script src="/js/dependencies/modernizr-2.8.3-respond-1.4.2.min.js"></script> -->
     <script src="/js/app.min.js"></script>
     <!--SCRIPTS END-->
 </body>
