--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
     <footer></footer>
 <!-- defer only app min and put rest js on top -->
     <!--SCRIPTS-->
+    <script src="/js/dependencies/lity.min.js.js"></script>
     <script src="/js/dependencies/jquery-1.11.3.min.js"></script>
     <script src="/js/dependencies/materialize.min.js"></script>
-    <script src="/js/dependencies/bluebird.min.js"></script>
+    <!-- <script src="/js/dependencies/bluebird.min.js"></script> -->
     <script src="/js/dependencies/mithril.min.js"></script>
     <!-- <script src="/js/dependencies/modernizr-2.8.3-respond-1.4.2.min.js"></script> -->
     <script src="/js/app.min.js"></script>
