--- a/index.html
+++ b/index.html
@@ -12,27 +12,25 @@
     <link rel="stylesheet" href="http://fonts.googleapis.com/icon?family=Material+Icons" >
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/styles/materialize.min.css" media="screen,projection">
-    <link rel="stylesheet" href="/styles/lity.min.css">
+    <link rel="stylesheet" href="/styles/lightbox.min.css">
     <link rel="stylesheet" href="/styles/normalize.min.css">
     <link rel="stylesheet" href="/styles/main.css">
     <!--STYLES END-->
 </head>
 <body>
 
-    <header>im not supposed to be seen</header>
+    <header></header>
 
-    <main>
-        <!-- <div class="main-container container"></div> -->
-    </main>
+    <main></main>
 
     <footer></footer>
-<!-- defer only app min and put rest js on top -->
+
     <!--SCRIPTS-->
     <script src="/js/dependencies/jquery-1.11.3.min.js"></script>
-    <script src="/js/dependencies/lity.min.js"></script>
+    <script src="/js/dependencies/lightbox.min.js"></script>
     <script src="/js/dependencies/materialize.min.js"></script>
     <script src="/js/dependencies/mithril.min.js"></script>
-    <!-- <script src="/js/dependencies/modernizr-2.8.3-respond-1.4.2.min.js"></script> -->
+    <script src="/js/dependencies/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     <script src="/js/app.min.js"></script>
     <!--SCRIPTS END-->
 </body>
